Change card from flex to grid to ensure alignment

--- a/style.css
+++ b/style.css
@@ -186,9 +186,8 @@ html {
     background-color: white;
     border: 1px solid #ccc;
     padding: 0 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
+    display: grid;
+    grid-template-rows: 20% 60% 20%;
 }
 
 .card-buttons {
